public_html/profiles/os2sub/themes/custom/site_fic/src/scss/custom/components/_fic-header-banners.scss
// |--------------------------------------------------------------------------
// | fic-header-banners
// |--------------------------------------------------------------------------
// |
// | This file contains styles for the following:
// | - .view-fic-header-banners
// |
// --------------------------------------------------
// Variables
// --------------------------------------------------

$desktop-width-2buttons: 570px;
$desktop-width-3buttons: 370px;
$desktop-width-4buttons: 270px;
$desktop-width-5buttons: 210px;
$desktop-width-6buttons: 170px;

$desktop-margin-default: 30px;

// --------------------------------------------------
// Styling
// --------------------------------------------------

.term-fic-header {
  @include container-fixed();
  font-family: $font-rbn021a;
  position: relative;
  // Hide empty FIC header.
  display: none;

  // Show FIC header only for pages with backstreched image.
  .backstretched & {
    display: block;
  }

  .views-slideshow-cycle-main-frame {
    height: 100% !important;
    position: static !important;
  }

  .views-slideshow-cycle-main-frame-row {
    position: static !important;
    height: 100% !important;
  }

  .views_slideshow_main {
    min-height: 372px;
    overflow: hidden;
  }
  .views_slideshow_cycle_main.views_slideshow_main.viewsSlideshowCycle-processed{
    display: flex;
    align-items: center;
    height: 0;
    justify-content: space-around;
  }
  .views-slideshow-cycle-main-frame.views_slideshow_cycle_teaser_section{
    display: flex;
    width: 100%;
    justify-content: center;
}
  .views-row {
    height: inherit;
  }

  .slide-content-wrapper {
    text-align: center;

    .field-name-description-field,
    .field-name-field-os2web-base-field-summary {
      color: $color-white;
      font-size: 4em;
      line-height: 1.15em;
      text-shadow: 1px 1px rgba(0, 0, 0, .75);
    }

    .field-name-field-os2web-base-field-ext-link {
      .field-item {
        display: inline-block;
        margin: 20px 10px;

        a {
          padding: 10px;
          display: block;
          font-size: 1em;
          font-family: sans-serif;
          font-weight: bold;
          text-transform: uppercase;
          color: $color-white;
          background-color: $color-blue;
          min-width: 185px;

          &:hover, &:focus {
            text-decoration: none;
          }
        }
      }
    }
  }

  .views-slideshow-controls-bottom,
  .field-name-field-os2web-base-field-related,
  .cycle-pager {

    > div {
      margin-bottom: 80px;
      overflow: hidden;
    }

    div {
      display: inline-block;
    }

    a {
      font-size: 1.7em;
      line-height: 1em;
      text-transform: uppercase;
      display: block;
      background: $color-white;
      color: $color-black;
      position: relative;
      text-decoration: none;
      width: 1170px;
      border: 5px solid $color-white;
      overflow: hidden;
      height: 80px;

      span {
        position: absolute;
        top: 50%;
        transform: translateY(-50%);
        padding: 0 40px 0 10px;
        display: block;
      }

      &:hover {
        background: $color-red;
        color: $color-white;
      }

      &::after {
        content: '›';
        display: block;
        height: 31px;
        position: absolute;
        right: 10px;
        top: 0;
        bottom: 0;
        margin: auto;
        font-size: 1.4em;
        font-family: "sans-serif";
      }
    }

    .views-slideshow-pager-field-item,
    .field-item {
      margin-right: $desktop-margin-default;

      &.views-row-first,
      &:first-child {
        display: none;
      }

      &:last-child {
        margin-right: 0;
      }
    }

    .views-slideshow-pager-fields > div {
      padding: 0;
    }
  }

  .views-slideshow-controls-bottom {
    font-size: 0;

    .views-slideshow-pager-field-item {
      font-size: 14px;

      span {
        width: 130px;
      }
    }
  }

  .slide-bottom {
    position: absolute;
    bottom: 0;
    left: 0;
    min-height: 60px;
    width: 100%;
    z-index: 1;
    text-transform: uppercase;

    .blue-block {
      background-color: $color-blue;
      min-height: 60px;
      width: 100%;

      a {
        display: block;
      }

      .text {
        color: $color-white;
        font-size: 2em;
        padding: 10px 10px 10px 17px;
        display: inline-block;
      }

      .read-more {
        color: $color-black;
        text-decoration: none;
        float: right;
        display: block;
        padding: 20px;
        font-size: 1em;
        font-family: sans-serif;
        font-weight: bold;
      }
    }

    .contact.modal-link {
      display: block;
      width: 100%;
      height: 100%;
      background-color: $color-red;
      color: $color-white;
      padding: 10px 0;
      text-align: center;
      font-size: 2em;

      &:hover, &:focus {
        text-decoration: none;
      }
    }
  }
}

.scroll-down {

  &-link {
    text-align: center;
    display: none;
    padding: 50px 0;

    .page-taxonomy-term & {
      display: block;
    }

    span {
      display: inline-block;
      height: 60px;
      width: 60px;
      background-image: url('../img/lookdown.png');
      background-repeat: no-repeat;
      transition: opacity 0.3s;
    }
    span:hover {
      opacity: 0.5;
    }
  }
}

.page-taxonomy {

  .view-mode-fic_header {
    display: flex;

    flex-direction: column;

    &,
    & .cycle-slide {
      height: inherit;
      width: 100%;
      background-color: transparent !important;
    }
  }

  .slide-content-wrapper {
    display: flex;

    justify-content: center;
    align-items: center;

    flex-grow: 1;
  }
}
/* ... */

